--- a/styles.css
+++ b/styles.css
@@ -88,3 +88,12 @@ header h1 {
         width: 100%;
     }
 }
+
+.description {
+    font-size: 1rem;
+    color: #f1f1f1;
+    margin-top: 10px;
+    font-weight: 300;
+    padding: 0 10px;
+    line-height: 1.6;
+}
